added table for customers
- React + TanStack Table v8
- Backend-driven pagination
- Dynamic column generation
- Filter-as-you-type (with debounce)
- Manual pagination
- Sorting with always-visible icons